fix the link spacing in the top nav

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2375,7 +2375,7 @@ main.landing-page > .background-wrapper {
   }
   .navbar-origin .navbar-collapse .nav-item,
   .navbar-origin .navbar-collapse .nav-item.dropdown {
-    padding: 20px;
+    padding: 20px 5px;
   }
 
   .headshot-wrapper {
